<resources>
    <string name="app_name">PregnancyForAll</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms">By creating your account, you agree to our </string>
    <string name="terms_of_service"><u>Terms of Service</u></string>
    <string name="terms_description">PregnancyForAll Application is a mobile application that provides useful information about pregancy.
                                        However, some information may not suit you perfectly depends on who the person is.
                                        Please take a moment to read these Terms of Service, which represent a binding Agreement between you and PregnancyForAll.
                                        1. PregnancyForAll does not provide medical advice
                                        2. Use good judgment when applying the information provided
                                        3. You need to sign up in order to use this application
                                        4. Posts may not be deleted once you add it so be careful when posting something
                                        5. Finally, the information is based on the following websites:
                                            http://www.modernmom.com/  http://www.cpmc.org/</string>
    <string name="login">Login ></string>
    <string name="signup_description">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="warning1">Please enter your email and your password</string>
    <string name="warning2">Invalid Email/PW</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create Account</string>
    <string name="pregnancy_care">Pregnancy Care</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="add_post">Add Post</string>

    <string name="Body">Body</string>
    <string name="Exercise">Exercise</string>
    <string name="Diet">Diet</string>

    <string name="email_exist_toast">Email Already Exist</string>
    <string name="wrong_combination">Wrong Combination of email and pw</string>

    <string name="post_title">Title</string>
    <string name="post_detail">Detail</string>
    <string name="post_month">Month Of Pregnancy</string>
    <string name="save_post">Save Post</string>

    <string name="facebook_app_id">411813502483205</string>
    <string name="select_pic">Select Your Picture</string>

</resources>
