
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="itp341.lee.woonghee.finalproject.View.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_textbox"
            android:layout_below="@id/email"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/email_textbox"
            android:text="@string/password"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_textbox"
            android:layout_below="@id/password"
            android:inputType="textPassword"

            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_below="@id/password_textbox"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>



        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_below="@id/login_button"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_description"
            android:text="@string/signup_description"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/signup_description"
            android:layout_alignBottom="@id/signup_description"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>
