<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.lee.woonghee.finalproject.View.PostDetailActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textStyle="bold"
        android:id="@+id/title_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_title"
        android:layout_toEndOf="@id/title_text"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_month"
        android:textStyle="bold"
        android:id="@+id/month_text"
        android:layout_below="@id/title_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_month"
        android:layout_toEndOf="@id/month_text"
        android:layout_alignBottom="@id/month_text"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_detail"
        android:textStyle="bold"
        android:id="@+id/detail_text"
        android:layout_below="@id/month_text"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/post_detail"
        android:layout_below="@id/detail_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>


</RelativeLayout>
