<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="itp341.lee.woonghee.finalproject.View.MonthDetailActivity">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Body"
            android:id="@+id/body_text"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Body Detail"
            android:id="@+id/body_detail"
            android:layout_below="@id/body_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercise"
            android:id="@+id/exercise_text"
            android:layout_below="@id/body_detail"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exercise Detail"
            android:id="@+id/exercise_detail"
            android:layout_below="@id/exercise_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diet"
            android:id="@+id/diet_text"
            android:layout_below="@id/exercise_detail"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diet Detail"
            android:id="@+id/diet_detail"
            android:layout_below="@id/diet_text"/>
    </RelativeLayout>
</ScrollView>
